# binaryninja-api

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  about.toml  activity.cpp  architecture.cpp  basicblock.cpp  binaryninjaapi.cpp  binaryninjaapi.h  binaryninjacore.h  binaryview.cpp  callingconvention.cpp  collaboration.cpp  component.cpp  database.cpp  debuginfo.cpp  defaultabb.cpp  defaultarch.cpp  demangle.cpp  downloadprovider.cpp  enterprise.cpp  enterprise.h  exceptions.cpp  externallibrary.cpp  filemetadata.cpp  firmwareninja.cpp  flowgraph.cpp  function.cpp  highlevelil.cpp  highlevelilinstruction.cpp  highlevelilinstruction.h  http.cpp  interaction.cpp  linearviewcursor.cpp  lineformatter.cpp  log.cpp  lowlevelil.cpp  lowlevelilinstruction.cpp  lowlevelilinstruction.h  (+24 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: rust.yml
api-docs/cppdocs/: Doxyfile-HTML  binaryninja-darkmode.js  binaryninja-docs.css  build_min_docs.py  header.html
api-docs/source/: conf.py
arch/arm64/: CMakeLists.txt  arch_arm64.cpp  arm64test.py  il.cpp  il_macros.h  neon_intrinsics.cpp  sysregs_enum.cpp  sysregs_enum.h
base/: CMakeLists.txt  compiler.h  function_ref.h  mutex.h
cmake/: FindBinaryNinjaCore.cmake
defaultarch/: CMakeLists.txt
demangler/: demangled_type_node.cpp
docs/: getting-started.md
examples/: CMakeLists.txt
objectivec/: objc.cpp  objc.h
plugins/bntl_utils/: CMakeLists.txt  Cargo.toml  README.md  build.rs
plugins/bntl_utils/cli/: Cargo.toml  README.md
plugins/bntl_utils/cli/src/: create.rs  diff.rs  dump.rs  input.rs  main.rs  validate.rs
plugins/bntl_utils/src/: command.rs  diff.rs  dump.rs  helper.rs  lib.rs  merge.rs  process.rs  schema.rs  tbd.rs  url.rs  validate.rs  winmd.rs
plugins/bntl_utils/src/command/: create.rs  diff.rs  dump.rs  validate.rs
plugins/bntl_utils/src/templates/: validate.html
plugins/bntl_utils/src/winmd/: info.rs  translate.rs
plugins/warp/: Cargo.toml  build.rs
plugins/warp/api/: CMakeLists.txt  warp.cpp  warp.h  warpcore.h
plugins/warp/api/python/: generator.cpp  warp.py  warp_enums.py
plugins/warp/benches/: convert.rs  function.rs  guid.rs
plugins/warp/demo/: Cargo.toml  build.rs
plugins/warp/examples/headless/src/: main.rs
plugins/warp/src/: cache.rs  container.rs  convert.rs  lib.rs  matcher.rs  plugin.rs  processor.rs
plugins/warp/src/cache/: container.rs  function.rs  guid.rs
plugins/warp/src/container/: disk.rs  network.rs
plugins/warp/src/container/network/: client.rs
plugins/warp/src/convert/: symbol.rs  types.rs
plugins/warp/src/plugin/: commit.rs  create.rs  ffi.rs  function.rs  load.rs  project.rs  render_layer.rs  settings.rs  workflow.rs
plugins/warp/src/plugin/ffi/: container.rs  file.rs  function.rs  processor.rs  ty.rs
plugins/warp/tests/: determinism.rs  matcher.rs  processor.rs
plugins/warp/tests/snapshots/: determinism___mbslen.obj.snap  determinism__atof.obj.snap  determinism__atoldbl.obj.snap  determinism__atox.obj.snap
plugins/warp/ui/: CMakeLists.txt  containers.cpp  containers.h  matched.cpp  matches.cpp  matches.h  plugin.cpp  plugin.h
plugins/warp/ui/shared/: chunk.cpp  chunk.h  commitdialog.cpp  commitdialog.h  constraint.cpp  constraint.h  fetchdialog.cpp  fetchdialog.h  fetcher.cpp  fetcher.h  file.cpp  file.h  function.cpp  function.h  misc.cpp  misc.h  processordialog.cpp  processordialog.h  search.cpp  selectprojectfilesdialog.cpp  selectprojectfilesdialog.h  source.cpp  source.h
plugins/workflow_objc/: BinaryNinja.h  CMakeLists.txt  Constants.h  GlobalState.cpp  GlobalState.h  LICENSE.txt  MessageHandler.cpp  MessageHandler.h  Performance.h  Plugin.cpp  README.md  Workflow.cpp  Workflow.h
plugins/workflow_objc/src/: lib.rs
plugins/workflow_objc/src/activities/: alloc_init.rs  inline_stubs.rs  objc_msg_send_calls.rs  remove_memory_management.rs  super_init.rs  util.rs
plugins/workflow_objc/src/activities/objc_msg_send_calls/: adjust_call_type.rs
plugins/workflow_objc/src/metadata/: global_state.rs  selector.rs
python/: __init__.py  architecture.py  basicblock.py  binaryview.py  bncompleter.py  callingconvention.py  compatibility.py  constantrenderer.py  datarender.py  debuginfo.py  demangle.py  downloadprovider.py  enterprise.py  fileaccessor.py  filemetadata.py  firmwareninja.py  flowgraph.py  function.py  functionrecognizer.py  generator.cpp  highlevelil.py  interaction.py  languagerepresentation.py  lineformatter.py  log.py  lowlevelil.py  mediumlevelil.py  platform.py  plugin.py  pluginmanager.py  project.py  renderlayer.py  scriptingprovider.py  secretsprovider.py  settings.py  stringrecognizer.py  transform.py  typearchive.py  typelibrary.py  typeparser.py  (+6 more)
rapidjson/: document.h
rust/: CMakeLists.txt  Cargo.toml  README.md
scripts/: check_docstring_formatting.py  check_markdown_list.py  test_build_external.py  test_build_internal.py
sphinx_rtd/: layout.html
stubs/: CMakeLists.txt
themes/: classic.bntheme  dark-blue.bntheme  dark.bntheme  high-contrast.bntheme  ninja-dark.bntheme  ninja-edit.bntheme  reflection.bntheme  slushee-dark.bntheme  slushee-light.bntheme  solarized-dark.bntheme  solarized-light.bntheme  summer.bntheme
ui/: bndbimportdialog.h  commands.h  containerbrowser.h  containeropenrequest.h  createstructdialog.h  disassemblyview.h  filecontext.h  filter.h  flowgraphwidget.h  historyview.h  linearview.h  logview.h  memorymap.h  metadatachoicedialog.h  options.h  progresstask.h  projectbrowser.h  scriptingconsole.h  searchresult.h  settingsview.h  sidebarwidget.h  stackview.h  stringsview.h  symbollist.h  tableviewbase.h  taglist.h  tagtypelist.h  theme.h  tokenizedtextview.h  typebrowser.h  typedialog.h  typeeditor.h  uicontext.h  uitypes.h  util.h  variablelist.h  viewframe.h  workflowmonitor.h  xreflist.h  xrefstate.h
view/kernelcache/api/python/: CMakeLists.txt  _kernelcachecore.py  _kernelcachecore_template.py  kernelcache.py  kernelcache_enums.py
view/kernelcache/workflow/: CMakeLists.txt  KernelCacheWorkflow.cpp  KernelCacheWorkflow.h
(+425 files in other folders)
