[package]
name = "bntl_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
binaryninja.workspace = true
binaryninjacore-sys.workspace = true
bntl_utils = { path = "../" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.58", features = ["derive"] }
rayon = "1.11"
serde_json = "1.0"
thiserror = "2.0"