[package]
name = "warp_ninja-static"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib"]
path = "../src/lib.rs"

[features]
demo = []

[dependencies]
tracing = "0.1"
binaryninja = { workspace = true, features = ["rayon", "demo"] }
binaryninjacore-sys.workspace = true
warp = { git = "https://github.com/Vector35/warp/", tag = "1.0.0" }
itertools = "0.14.0"
dashmap = { version = "6.1", features = ["rayon"]}
rayon = "1.10"
arboard = "3.4"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
thiserror = "2.0"
ar = { git = "https://github.com/mdsteele/rust-ar" }
tempdir = "0.3.7"
directories = "6.0"
compact_str = { version = "0.9.0", features = ["serde"] }
base64 = "0.22"
serde_qs = "0.15"

[dev-dependencies]
criterion = "0.6"
insta = { version = "1.42", features = ["yaml"] }
